# django-blog-website

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  uv_django_reference.md
blog/templates/blog/: base.html
django_blog/: db.sqlite3  settings.py  urls.py
django_blog/blog/: views.py
django_blog/blog/migrations/: 0001_initial.py
django_blog/blog/templates/blog/: about.html  base.html  home.html
django_blog/django_blog/: settings.py  urls.py
django_blog/users/: models.py
django_blog/users/migrations/: 0001_initial.py
users/: views.py
users/templates/users/: register.html
