[project]
name = "django-blog-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap4>=2026.2",
    "django>=6.0.6",
    "django-crispy-forms>=2.6",
    "django-stubs>=6.0.6",
    "djlint>=1.39.4",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
